cmake_minimum_required(VERSION 2.8)
project(part3)
set(CMAKE_CXX_FLAGS "-std=c++11 -Wall")
add_executable(part3 main.cc)
set_target_properties(part3 PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
set_target_properties(part3 PROPERTIES DEBUG_POSTFIX "_d")
message("CMAKE_BUILD_TYPE is \"${CMAKE_BUILD_TYPE}\"")
message("CMAKE_CXX_FLAGS_DEBUG is \"${CMAKE_CXX_FLAGS_DEBUG}\"")
message("CMAKE_CXX_FLAGS_RELEASE is \"${CMAKE_CXX_FLAGS_RELEASE}\"")
