cmake_minimum_required(VERSION 2.8)
project(part4)
set(CMAKE_CXX_FLAGS "-std=c++11 -Wall")
if (CMAKE_BUILD_TYPE STREQUAL Debug)
  set(BUILD_POSTFIX "_d")
else (CMAKE_BUILD_TYPE STREQUAL Debug)
  set(BUILD_POSTFIX "")
endif (CMAKE_BUILD_TYPE STREQUAL Debug)
include_directories(part4)
add_subdirectory(part4)
add_subdirectory(test)